# tuix

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
baseview/: Cargo.toml
baseview/src/: application.rs  application2.rs  event_manager.rs  lib.rs  window.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/accessibility/: mod.rs  text_to_speach.rs  text_to_speech.rs
core/src/animation/: anim_ext.rs  animation.rs  animation_builder.rs  mod.rs
core/src/binding/: bind_ext.rs  lens.rs  mod.rs  model.rs  node.rs  store.rs
core/src/events/: build_handler.rs  builder.rs  context.rs  cursor.rs  event.rs  event_handler.rs  event_manager.rs  inspectable.rs  mod.rs  widget.rs  widget_event.rs  window.rs  window_description.rs  window_event.rs
core/src/id/: id_manager.rs
core/src/input/: mod.rs
core/src/layout/: cache.rs  hierarchy.rs  mod.rs  node.rs
core/src/state/: animation.rs  animator.rs  canvas.rs  command.rs  data.rs  entity.rs  geometry.rs  handle.rs  hierarchy.rs  hierarchy2.rs  keyboard.rs  layer.rs  mod.rs  mouse.rs  resource.rs  transform.rs  tree.rs
core/src/state/animation/: anim_ext.rs  animation.rs  animation_builder.rs  animation_state.rs  interpolator.rs  mod.rs
core/src/state/id/: id_manager.rs  mod.rs
core/src/state/storage/: animatable_set.rs  animatable_storage.rs  dense_storage.rs  dense_vec.rs  mod.rs  sparse_set.rs  style_set.rs  style_storage.rs
core/src/state/style/: color.rs  display.rs  flexbox.rs  gradient.rs  grid.rs  layout.rs  length.rs  mod.rs  prop.rs  prop_set.rs  property.rs  rule.rs  selector.rs  shadow.rs  shape.rs  specificity.rs  style_rule.rs  text.rs  theme.rs  trans.rs  transform.rs  units.rs
core/src/state/style/stylesheet/: parser.rs  parser_error.rs  text_pos.rs  token.rs
core/src/state/style/themes/: default_theme.css
core/src/storage/: animatable_set.rs  mod.rs  sparse_set.rs  style_set.rs
core/src/store/: data_manager.rs  graph.rs  lens.rs  mod.rs  node.rs  update.rs
core/src/style/: color.rs  display.rs  gradient.rs  layout.rs  mod.rs  prop.rs  property.rs  rule.rs  selector.rs  shadow.rs  style_rule.rs  theme.rs  transform.rs
core/src/systems/: draw_system.rs  focus_system.rs  hover_system.rs  layer_system.rs  layout2.rs  layout_old.rs  layout_system.rs  mod.rs  new_layout.rs  style_system.rs
core/src/text/: editable.rs  fsm.rs  layout.rs  mod.rs  movement.rs  selection.rs
core/src/text/shaping/: line_breaker.rs  segmenter.rs  shape_result.rs
core/src/tree/: mod.rs  tree.rs  tree_ext.rs  tree_iter.rs  window_iter.rs
core/src/widget/: builder.rs  mod.rs  widget.rs  widget_event.rs
core/src/widgets/: button.rs  checkable.rs  checkbox.rs  checklist.rs  combobox.rs  containers.rs  context_menu.rs  control_knob.rs  debug_container.rs  dialog.rs  dropdown.rs  element.rs  label.rs  length_box.rs  listbox.rs  menu.rs  mod.rs  movable.rs  panel.rs  progress.rs  radio.rs  scroll_container.rs  scrollbar.rs  slider.rs  spinner.rs  switch.rs  tab.rs  text_area.rs  textbox.rs  tooltip.rs  value_knob.rs  value_slider.rs  vector_edit.rs  win.rs  window.rs
core/src/widgets/audio_widgets/: control_knob.rs  grid.rs  knob.rs  levels.rs  mod.rs  normalized_map.rs  value_knob.rs
core/src/widgets/buttons/: abstract_button.rs  button.rs  check_button.rs  checkable.rs  checkbox.rs  mod.rs  radio.rs  switch.rs
core/src/widgets/containers/: list.rs  listbox.rs  mod.rs  stack.rs
core/src/widgets/inputs/: mod.rs  range_slider.rs  slider.rs  spinbox.rs  textbox.rs  vector.rs  vector_edit.rs
core/src/widgets/menus/: context_menu.rs  menu.rs  mod.rs
core/src/widgets/popups/: mod.rs  popup.rs
core/src/window/: cursor.rs  mod.rs  window.rs  window_description.rs  window_event.rs
dylib/: Cargo.toml
dylib/src/: lib.rs
examples/: 7GUIs_counter.rs  accessibility.rs  add_remove.rs  animation.rs  atom.rs  audio_eq8.rs  baseview_test.rs  baseview_test2.rs  basic.rs  basic2.rs  boxes.rs  calculator.rs  clipping.rs  combo_widget.rs  command_palette.rs  counter.rs  counter2.rs  counter_reactive.rs  counter_reactive2.rs  cursor_icons.rs  cursor_icons_css.rs  custom_styling.rs  daw.rs  drag_drop.rs  dropdown_color.rs  editor.rs  eq8.rs  extended_slider.rs  flexible_layout.rs  hello_gui.rs  idle_callback.rs  image.rs  inspector.rs  layout_test.rs  listbox_reactive.rs  listview_selection.rs  menus.rs  minesweeper.rs  multiwindow.rs  mvvm.rs  (+24 more)
examples/7guis/: temp.rs  temp_reactive.rs
examples/animation/: basic_animation.rs  multiple.rs  transition.rs
examples/audio_eq8/: Cargo.toml
examples/binding/: basic.rs  bind_and.rs  converter.rs  model.rs  multiple_stores.rs  todos.rs  todos2.rs  todos3.rs  treeview2.rs  treeview3.rs  treeview4.rs
examples/editor/: Cargo.toml
examples/hello_gui/: Cargo.toml
examples/layout/: align_items.rs  flex_grow.rs  justify_content.rs  position.rs
examples/styling/: font.rs  hot_reload.rs  hover.rs  inline.rs  (+3 more)
glutin/: Cargo.toml  application.rs  lib.rs  window.rs
glutin/src/: application.rs  keyboard.rs  lib.rs  window.rs
inspector-derive/: Cargo.toml
internal/: Cargo.toml
internal/src/: lib.rs
src/: application.rs  application_bv.rs  lib.rs  window.rs  window_bv.rs
tests/: style_parsing.rs
tuix-derive/: Cargo.toml
tuix_derive/: Cargo.toml
widgets/: Cargo.toml
widgets/src/: color_picker.rs  combobox.rs  common.rs  debug_container.rs  dropdown.rs  element.rs  label.rs  length_box.rs  lib.rs  panel.rs  progress.rs  scroll_container.rs  scrollbar.rs  tab.rs  text_area.rs  tooltip.rs  value_slider.rs
widgets/src/audio_widgets/: control_knob.rs  knob.rs  levels.rs  mod.rs  value_knob.rs
widgets/src/buttons/: button.rs  check_button.rs  checkbox.rs  mod.rs  radio.rs  switch.rs
widgets/src/containers/: list.rs  listbox.rs  mod.rs  stack.rs  treeview.rs
widgets/src/inputs/: mod.rs  range_slider.rs  slider.rs  spinbox.rs  textbox.rs  vector.rs  vector_edit.rs
widgets/src/menus/: context_menu.rs  menu.rs  mod.rs
widgets/src/popups/: mod.rs  popup.rs  popup_window.rs
winit/: Cargo.toml
winit/src/: application.rs  keyboard.rs  lib.rs  window.rs
(+131 files in other folders)
