[package]
name = "tuix_baseview"
version = "0.2.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>", "Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/geom3trik/tuix"
description = "Baseview backend for tuix"


[dependencies]
raw-gl-context = "0.1"
tuix_core = { path = "../core" }
baseview = { git = "https://github.com/RustAudio/baseview.git"}
keyboard-types = { version = "0.5.0", default-features = false }
raw-window-handle = "0.3"
femtovg = "0.2.5"