[package]
name = "tuix_core"
version = "0.1.0"
authors = ["George Atkinson"]
license = "MIT/Apache-2.0"
repository = "https://github.com/geom3trik/tuix"
edition = "2018"

[dependencies]
gl = "0.14.0"
cssparser = "0.27.2"
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master", default-features = false }
bimap = "0.5.3"
keyboard-types = { version = "0.5", default-features = false }
fnv = "1.0.7"
num = "0.3.1"