[package]
name = "tuix_core"
version = "0.1.0"
authors = ["George Atkinson"]
license = "MIT/Apache-2.0"
repository = "https://github.com/geom3trik/tuix"
edition = "2018"

[dependencies]
cssparser = "0.27.2"
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master"}
keyboard-types = { version = "0.6.1", default-features = false }
fnv = "1.0.7"
num-traits = "0.2.14"
image = { version = "0.23.6"}