[package]
name = "tuix_glutin"
version = "0.1.0"
authors = ["George Atkinson"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/geom3trik/tuix"


[dependencies]
glutin = "0.27.0"
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master"}
keyboard-types = { version = "0.5.0", default-features = false }
tuix_core = { path = "../core" }
fnv = "1.0.7"