[package]
name = "tuix_internal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["glutin"]
winit = ["tuix_winit"]
glutin = ["tuix_glutin"]
baseview = ["tuix_baseview"]


[dependencies]
tuix_core = { version = "0.1.0", path = "../core" }
tuix_widgets = { version = "0.1.0", path = "../widgets"}
tuix_winit = { version = "0.1.0", path = "../winit", optional = true }
tuix_glutin = { version = "0.1.0", path = "../glutin", optional = true }
tuix_baseview = { version = "0.1.0", path = "../baseview", optional = true }
tuix-derive = {version = "0.1.0", path = "../tuix-derive"}
