[package]
name = "tuix_widgets"
version = "0.1.0"
authors = ["George Atkinson"]
license = "MIT/Apache-2.0"
repository = "https://github.com/geom3trik/tuix"
edition = "2018"

[dependencies]
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master"}
keyboard-types = { version = "0.5.0", default-features = false }
better_any = {git = "https://github.com/rrevenantt/better_any", branch = "main"}
num-traits = "0.2.14"
tuix-derive = { version = "0.1.0", path = "../tuix-derive" }
tuix_core = { version = "0.1.0", path = "../core"}
