[package]
name = "tuix_widgets"
version = "0.2.0"
authors = ["George Atkinson"]
license = "MIT"
repository = "https://github.com/geom3trik/tuix"
edition = "2018"
description = "Widgets for tuix"

[dependencies]
femtovg = "0.2.5"
keyboard-types = { version = "0.5.0", default-features = false }
num-traits = "0.2.14"
tuix_derive = { version = "0.2.0", path = "../tuix_derive" }
tuix_core = { version = "0.2.0", path = "../core"}
