[package]
name = "tuix_winit"
version = "0.1.0"
authors = ["George Atkinson", "Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-gl-context = "0.1"
tuix_core = { path = "../core" }
winit = "0.24.0"
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master" }
keyboard-types = { version = "0.5.0", default-features = false }